# Shooting-brutto

./: CMakeLists.txt  README.md  main.cpp
Docs/html/: annotated.html  bullet_8hpp.html  bullet_8hpp_source.html  character_8hpp.html  character_8hpp_source.html  class_bullet-members.html  class_bullet.html  class_character-members.html  class_character.html  class_enemy-members.html  class_enemy.html  class_life_bar-members.html  class_life_bar.html  class_object-members.html  class_object.html  class_text_renderer-members.html  class_text_renderer.html  classes.html  constants_8hpp.html  constants_8hpp_source.html  dir_03210a3fd00468e055c740ed4bcd3959.html  dir_23d5af2e228901f93ce64754cbbfed9f.html  dir_34a1008dafcf7208b207dd44d799e75e.html  dir_37c856af12caa12613c2d140e31a6c70.html  dir_42d41070953014e4936f61bdc375df58.html  dir_444e38ffd97fcb85e9131365e968ea13.html  dir_88daf05616196eb210c6c538937e567d.html  dir_ccfaf49d12db859fbe18e98f546322a2.html  dir_d44c64559bbebec7f509842c48db8b23.html  enemy_8hpp.html  enemy_8hpp_source.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  (+10 more)
Docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_3.js  classes_5.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  enums_0.js  enumvalues_0.js  enumvalues_2.js  files_0.js  files_1.js  files_2.js  files_3.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  pages_0.js  (+11 more)
Docs/latex/: annotated.tex  bullet_8hpp.tex  bullet_8hpp_source.tex  character_8hpp.tex  character_8hpp_source.tex  class_bullet.tex  class_character.tex  class_enemy.tex  class_life_bar.tex  class_object.tex  class_text_renderer.tex  constants_8hpp.tex  constants_8hpp_source.tex  enemy_8hpp.tex  enemy_8hpp_source.tex  files.tex  index.tex  life_bar_8hpp.tex  life_bar_8hpp_source.tex  object_8hpp.tex  object_8hpp_source.tex  refman.tex  sottoprogrammi_8hpp.tex  sottoprogrammi_8hpp_source.tex  text_8hpp.tex  text_8hpp_source.tex
include/: Introduction.txt
include/bullet/: bullet.cpp  bullet.hpp
include/character/: character.cpp  character.hpp
include/constants/: constants.hpp
include/enemy/: enemy.cpp  enemy.hpp
include/lifeBar/: lifeBar.hpp
include/object/: object.hpp
include/sottoprogrammi/: sottoprogrammi.cpp  sottoprogrammi.hpp
include/text/: text.cpp  text.hpp
